--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,18 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
-    <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+    android:viewportWidth="1000"
+    android:viewportHeight="1000">
+  <group android:scaleX="0.4"
+      android:scaleY="0.4"
+      android:translateX="300"
+      android:translateY="300">
+    <group>
+      <clip-path
+          android:pathData="M0,0h1000v1000h-1000z"/>
+      <path
+          android:pathData="M1000,500C1000,384.3 959.9,272.2 886.5,182.8C813.1,93.4 711,32.2 597.5,9.6C484.1,-13 366.3,4.5 264.3,59C162.3,113.6 82.3,201.8 38.1,308.7C-6.2,415.5 -12,534.4 21.5,645.1C55.1,755.8 126,851.5 222.2,915.7C318.4,980 433.9,1008.9 549,997.6C664.1,986.3 771.8,935.3 853.6,853.6L586.7,586.7C566.6,606.8 540.3,619.3 512,622C483.8,624.8 455.5,617.7 431.9,602C408.3,586.2 390.9,562.7 382.7,535.6C374.4,508.4 375.9,479.3 386.7,453.1C397.6,426.9 417.2,405.2 442.2,391.9C467.2,378.5 496.1,374.2 523.9,379.7C551.7,385.3 576.8,400.3 594.8,422.2C612.8,444.1 622.6,471.6 622.6,500H1000Z"
+          android:fillColor="#FFD60A"/>
+    </group>
+  </group>
 </vector>
